--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           ></textarea>
         </div>
         <div class="card-footer">
-          <button id="generate" class="btn">Generate Password</button>
+          <button id="generate" class="btn">Generate A Random Password</button>
         </div>
       </div>
     </div>
