--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Password Generator</title>
-    <link rel="stylesheet" href="/starter/style.css"/>
+    <title>Random Password Generator</title>
+    <link rel="stylesheet" href="starter/style.css"/>
   </head>
   <body>
     <div class="wrapper">
